Added debug bool parameter for error printing

--- a/NLog.config
+++ b/NLog.config
@@ -6,7 +6,7 @@
   </extensions>
   <targets>
     <target name="logentries" type="Logentries" key="ac3dc54c-2084-4c00-9792-2de17e0043bc" location="localhost6/nlog.log"
-            layout="${date:format=ddd MMM dd HH\:mm\:ss zzz yyyy} ${logger} : ${level:uppercase=true}, ${message}"/>
+            debug="true" layout="${date:format=ddd MMM dd HH\:mm\:ss zzz yyyy} ${logger} : ${level:uppercase=true}, ${message}"/>
   </targets>
   <rules>
     <logger name="*" minLevel="Info" appendTo="logentries"/>
