Edited NLog.config via GitHub

--- a/NLog.config
+++ b/NLog.config
@@ -5,7 +5,7 @@
     <add assembly="LeTarget"/>
   </extensions>
   <targets>
-    <target name="logentries" type="Logentries" key="ac3dc54c-2084-4c00-9792-2de17e0043bc" location="localhost6/nlog.log"
+    <target name="logentries" type="Logentries" key="USER-KEY-HERE" location="LOG-LOCATION-HERE"
             debug="true" layout="${date:format=ddd MMM dd HH\:mm\:ss zzz yyyy} ${logger} : ${level:uppercase=true}, ${message}"/>
   </targets>
   <rules>
