Amended mistake in Add Assembly to line up with Nuget dll

--- a/NLog.config
+++ b/NLog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <extensions>
-    <add assembly="LeTarget"/>
+    <add assembly="le_nlog"/>
   </extensions>
   <targets>
     <target name="logentries" type="Logentries" key="USER-KEY-HERE" location="LOG-LOCATION-HERE"
